sample model in swagger
